# tecnicas_programacao_2023_1

./: LICENSE  README.md
bee_2694_calculadora/: CMakeLists.txt  main.cpp
exemplo_funcao_que_busca_numeros/: CMakeLists.txt  main.cpp
jogo_da_forca/: CMakeLists.txt  main.cpp
